add: day2 import github OAuth

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                 <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?scope=user:email&client_id=1aeb06facd0a0cde2309">登录</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=1aeb06facd0a0cde2309&state=20230510cv">登录</a></li>
             </ul>
         </div>
     </div>
