--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,31 +10,36 @@
     <script type="application/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">demo</span>
-            </button>
-            <a class="navbar-brand" href="#">demo</a>
+<!--        logo-->
+        <div class="navbar-header col-sm-3 col-md-3 col-lg-3">
+            <img class="navbar-brand" src="img/leaves_cube.jpg" alt="logo image" style="width: 100%;height: 100%"/>
+        </div>
+
+        <div class="collapse navbar-collapse col-sm-9 col-md-9 col-lg-9" style="height: 30px">
+            <ul class="nav navbar-nav"  style="width: 100%;height: 100%">
+                <li class="active"  style="width: 100%;height: 100%">
+                    <a href="#" style="width: 100%;height: 100%" >Link</a>
+                </li>
+            </ul>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user == null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=a9951ac7f088705f5d37&state=20230510cv">登录</a>
-                    <span th:if="${session.errmsg != null}" th:text="${session.errmsg}" ></span>
-                </li>
-                <li th:if="${session.user != null}">
-                    <a href="#" th:text="${session.user.name}"></a>
-                </li>
-            </ul>
-        </div>
+<!--        <div class="collapse navbar-collapse col-sm-9 col-md-9 col-lg-9" id="bs-example-navbar-collapse-1">-->
+<!--            <ul class="nav navbar-nav">-->
+<!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+<!--            </ul>-->
+<!--            <ul class="nav navbar-nav navbar-right">-->
+<!--                <li th:if="${session.user == null}">-->
+<!--                    <a href="https://github.com/login/oauth/authorize?client_id=a9951ac7f088705f5d37&state=20230510cv">登录</a>-->
+<!--                    <span th:if="${session.errmsg != null}" th:text="${session.errmsg}" ></span>-->
+<!--                </li>-->
+<!--                <li th:if="${session.user != null}">-->
+<!--                    <a href="#" th:text="${session.user.name}"></a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
     </div>
 </nav>
 </body>
